projetGL/src/test/deca/codegen/invalid/test_modulo_zero_op3.deca
// Description :
//    Test de l'opération modulo avec un diviseur nul résultant d'une opération
//
// Resultats:
//    Erreur : Modulo par zero
{
    int x=2%(2*0);
}